# parallel-programming

./: LICENSE  README.md  test  test.cpp
lab_1/: CMakeLists.txt
lab_1/src/: cgm.c  cgm.h  go  log.txt  main.c
lab_1/stat1/: cgm.c
lab_1/stat2/: log.txt
lab_1/var_1/: cgm.c  go  log.txt
lab_1/var_2/: cgm.c  cgm.h  log.txt  main.c
lab_2/src/: cgm.c  config.txt  go  log.txt
lab_2/stat0/: cgm.c  gmon.out  go  log.txt
lab_2/stat1/: go1  go2  go3  log.txt
lab_2/stat2/: cgm.c  cgm.h  go  log.txt  main.c
lab_3/: CMakeLists.txt  main.c
lab_3/src/: go  main.c  mul_grid.c  mul_grid.h
lab_4/: CMakeLists.txt
lab_4/src/: go  main.c
lab_5/: CMakeLists.txt
lab_5/src/: main.c  tasks_manager.c  tasks_manager.h
modules/: enable_warnings.cmake
